--- a/styles/styes.css
+++ b/styles/styes.css
@@ -14,7 +14,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(/assets/images/onda.svg);
+    background-image: url(../assets/images/onda.svg);
     width: 100%;
     background-position: -380px 380px;
     background-repeat: no-repeat;
